--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="container">
         <h1>🔐 DataGate</h1>
         
-        <div class="file-input-wrapper" id="fileWrapper" tabindex="0" role="button" aria-label="ファイルを選択">
+        <div class="file-input-wrapper" id="fileWrapper" class="file-input-wrapper" tabindex="0" role="button" aria-label="ファイルを選択">
             📁 ファイルを選択
             <div id="fileName"></div>
             <input type="file" id="fileInput" />
@@ -160,16 +160,24 @@
 
     <script>
 document.addEventListener('DOMContentLoaded', () => {
-  // 要素取得
-  const fileWrapper = document.getElementById('fileWrapper');
-  const fileInput   = document.getElementById('fileInput');
-  const fileName    = document.getElementById('fileName');
-  const emailInput  = document.getElementById('emailInput');
-  const uploadBtn   = document.getElementById('uploadBtn');
-  const loading     = document.getElementById('loading');
-  const result      = document.getElementById('result');
+  // セレクタの冗長化（IDが異なる場合にも対応）
+  const $ = (sel) => document.querySelector(sel);
+  const main = (sels) => sels.map((s) => ).find(Boolean);
 
-  // ユーティリティ
+  const fileWrapper = main(['#fileWrapper', '.file-input-wrapper']);
+  const fileInput   = main(['#fileInput', 'input[type="file"]']);
+  const fileNameEl  = main(['#fileName', '.file-name', '#selectedFileName']);
+  const emailInput  = main(['#emailInput', 'input[type="email"]', 'input[name="recipientEmail"]']);
+  const uploadBtn   = main(['#uploadBtn', '#uploadButton', 'button[type="submit"]']);
+  const loading     = main(['#loading', '.loading']);
+  const result      = main(['#result', '.result']);
+
+  // ない場合は最低限の要素を作る（デバッグしやすいように）
+  const ensure = (el, label) => { if(!el) console.warn(label + ' not found'); return el; };
+  ensure(fileWrapper,'fileWrapper'); ensure(fileInput,'fileInput');
+  ensure(fileNameEl,'fileName'); ensure(uploadBtn,'uploadBtn');
+  ensure(emailInput,'emailInput'); ensure(loading,'loading'); ensure(result,'result');
+
   const getSafeLink = (data) => {
     const fid = (data?.fileId || data?.id || '');
     if (data?.downloadLink) return String(data.downloadLink);
@@ -177,34 +185,32 @@ document.addEventListener('DOMContentLoaded', () => {
     return '';
   };
 
-  // ファイル選択：クリック＆キーボード（Enter/Space）
+  // クリック/キーでファイルピッカーを開く（ラッパ限定）
   const openPicker = (e) => { e?.preventDefault?.(); fileInput?.click?.(); };
   fileWrapper?.addEventListener('click', openPicker);
   fileWrapper?.addEventListener('keydown', (e) => {
     if (e.key === 'Enter' || e.key === ' ') openPicker(e);
   });
 
-  // 変更時：ファイル名を表示
+  // ファイル名の表示
   fileInput?.addEventListener('change', (e) => {
     const f = e?.target?.files?.[0];
-    fileName.textContent = f ? f.name : '';
+    if (fileNameEl) fileNameEl.textContent = f ? f.name : '';
   });
 
-  // アップロード
-  uploadBtn?.addEventListener('click', async () => {
+  // 送信ボタンのクリック
+  uploadBtn?.addEventListener('click', async (e) => {
+    e?.preventDefault?.();
     try {
-      // 入力チェック
       const f = fileInput?.files?.[0];
       if (!f) { alert('ファイルを選択してください'); return; }
       const email = (emailInput?.value || '').trim();
       if (!email || !email.includes('@')) { alert('有効なメールアドレスを入力してください'); return; }
 
-      // UI状態
-      uploadBtn.disabled = true;
-      loading.style.display = 'block';
-      result.style.display = 'none';
+      if (uploadBtn) uploadBtn.disabled = true;
+      if (loading) loading.style.display = 'block';
+      if (result) result.style.display = 'none';
 
-      // 送信
       const fd = new FormData();
       fd.append('file', f);
       fd.append('recipientEmail', email);
@@ -214,39 +220,41 @@ document.addEventListener('DOMContentLoaded', () => {
 
       if (data?.success) {
         const safeLink = getSafeLink(data);
-
-        result.className = 'success';
-        result.innerHTML = 
-          <h3>✅ アップロード成功！</h3>
-          <p>\</p>
-          <p><strong>ダウンロードリンク:</strong></p>
-          <a href="\" target="_blank" class="download-link">📥 ダウンロードページを開く</a>
-          <div class="link-box">
-            \
-            <button class="copy-btn" onclick="navigator.clipboard.writeText('\').then(()=>alert('リンクをコピーしました！'))">
-              📋 リンクをコピー
-            </button>
-          </div>
-          <button onclick="location.reload()" style="margin-top:20px;">新しいファイルをアップロード</button>
-        ;
-        result.style.display = 'block';
+        if (result) {
+          result.className = 'success';
+          result.innerHTML = \
+            <h3>✅ アップロード成功！</h3>
+            <p>\</p>
+            <p><strong>ダウンロードリンク:</strong></p>
+            <a href="\" target="_blank" class="download-link">📥 ダウンロードページを開く</a>
+            <div class="link-box">
+              \
+              <button class="copy-btn" onclick="navigator.clipboard.writeText('\').then(()=>alert('リンクをコピーしました！'))">📋 リンクをコピー</button>
+            </div>
+            <button onclick="location.reload()" style="margin-top:20px;">新しいファイルをアップロード</button>
+          \;
+          result.style.display = 'block';
+        }
       } else {
         throw new Error(data?.error || 'アップロードに失敗しました');
       }
     } catch (err) {
       console.error(err);
-      result.className = 'error';
-      result.innerHTML = <h3>❌ エラー</h3><p>\</p>;
-      result.style.display = 'block';
+      if (result) {
+        result.className = 'error';
+        result.innerHTML = \<h3>❌ エラー</h3><p>\</p>\;
+        result.style.display = 'block';
+      }
     } finally {
-      uploadBtn.disabled = false;
-      loading.style.display = 'none';
+      if (uploadBtn) uploadBtn.disabled = false;
+      if (loading) loading.style.display = 'none';
     }
   });
 });
 </script>
 </body>
 </html>
+
 
 
 
