--- a/index.html
+++ b/index.html
@@ -160,100 +160,100 @@
 
     <script>
 document.addEventListener('DOMContentLoaded', () => {
-  // セレクタの冗長化（IDが異なる場合にも対応）
-  const $ = (sel) => document.querySelector(sel);
-  const main = (sels) => sels.map((s) => ).find(Boolean);
+  // セレクタヘルパ（$ を使わない）
+  const qs  = (sel) => document.querySelector(sel);
+  const pick = (sels) => sels.map((s) => qs(s)).find(Boolean);
 
-  const fileWrapper = main(['#fileWrapper', '.file-input-wrapper']);
-  const fileInput   = main(['#fileInput', 'input[type="file"]']);
-  const fileNameEl  = main(['#fileName', '.file-name', '#selectedFileName']);
-  const emailInput  = main(['#emailInput', 'input[type="email"]', 'input[name="recipientEmail"]']);
-  const uploadBtn   = main(['#uploadBtn', '#uploadButton', 'button[type="submit"]']);
-  const loading     = main(['#loading', '.loading']);
-  const result      = main(['#result', '.result']);
-
-  // ない場合は最低限の要素を作る（デバッグしやすいように）
-  const ensure = (el, label) => { if(!el) console.warn(label + ' not found'); return el; };
-  ensure(fileWrapper,'fileWrapper'); ensure(fileInput,'fileInput');
-  ensure(fileNameEl,'fileName'); ensure(uploadBtn,'uploadBtn');
-  ensure(emailInput,'emailInput'); ensure(loading,'loading'); ensure(result,'result');
+  const fileWrapper = pick(['#fileWrapper', '.file-input-wrapper']);
+  const fileInput   = pick(['#fileInput', 'input[type="file"]']);
+  const fileNameEl  = pick(['#fileName', '.file-name', '#selectedFileName']);
+  const emailInput  = pick(['#emailInput', 'input[type="email"]', 'input[name="recipientEmail"]']);
+  const uploadBtn   = pick(['#uploadBtn', '#uploadButton', 'button[type="submit"]']);
+  const loading     = pick(['#loading', '.loading']);
+  const result      = pick(['#result', '.result']);
 
   const getSafeLink = (data) => {
-    const fid = (data?.fileId || data?.id || '');
-    if (data?.downloadLink) return String(data.downloadLink);
+    const fid = (data && (data.fileId || data.id)) || '';
+    if (data && data.downloadLink) return String(data.downloadLink);
     if (fid) return location.origin + '/download.html?id=' + fid;
     return '';
   };
 
-  // クリック/キーでファイルピッカーを開く（ラッパ限定）
-  const openPicker = (e) => { e?.preventDefault?.(); fileInput?.click?.(); };
-  fileWrapper?.addEventListener('click', openPicker);
-  fileWrapper?.addEventListener('keydown', (e) => {
-    if (e.key === 'Enter' || e.key === ' ') openPicker(e);
-  });
+  // ファイルピッカー（クリック/Enter/Space）
+  const openPicker = (e) => { if (e && e.preventDefault) e.preventDefault(); if (fileInput && fileInput.click) fileInput.click(); };
+  if (fileWrapper) {
+    fileWrapper.addEventListener('click', openPicker);
+    fileWrapper.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter' || e.key === ' ') openPicker(e);
+    });
+  }
 
-  // ファイル名の表示
-  fileInput?.addEventListener('change', (e) => {
-    const f = e?.target?.files?.[0];
-    if (fileNameEl) fileNameEl.textContent = f ? f.name : '';
-  });
+  // ファイル名表示
+  if (fileInput) {
+    fileInput.addEventListener('change', (e) => {
+      const f = e && e.target && e.target.files && e.target.files[0];
+      if (fileNameEl) fileNameEl.textContent = f ? f.name : '';
+    });
+  }
 
-  // 送信ボタンのクリック
-  uploadBtn?.addEventListener('click', async (e) => {
-    e?.preventDefault?.();
-    try {
-      const f = fileInput?.files?.[0];
-      if (!f) { alert('ファイルを選択してください'); return; }
-      const email = (emailInput?.value || '').trim();
-      if (!email || !email.includes('@')) { alert('有効なメールアドレスを入力してください'); return; }
+  // 送信
+  if (uploadBtn) {
+    uploadBtn.addEventListener('click', async (e) => {
+      if (e && e.preventDefault) e.preventDefault();
+      try {
+        const f = fileInput && fileInput.files && fileInput.files[0];
+        if (!f) { alert('ファイルを選択してください'); return; }
+        const email = ((emailInput && emailInput.value) || '').trim();
+        if (!email || !email.includes('@')) { alert('有効なメールアドレスを入力してください'); return; }
 
-      if (uploadBtn) uploadBtn.disabled = true;
-      if (loading) loading.style.display = 'block';
-      if (result) result.style.display = 'none';
+        if (uploadBtn) uploadBtn.disabled = true;
+        if (loading) loading.style.display = 'block';
+        if (result) result.style.display = 'none';
 
-      const fd = new FormData();
-      fd.append('file', f);
-      fd.append('recipientEmail', email);
+        const fd = new FormData();
+        fd.append('file', f);
+        fd.append('recipientEmail', email);
 
-      const resp = await fetch('/api/upload', { method:'POST', body: fd });
-      const data = await resp.json().catch(() => ({}));
+        const resp = await fetch('/api/upload', { method:'POST', body: fd });
+        const data = await resp.json().catch(() => ({}));
 
-      if (data?.success) {
-        const safeLink = getSafeLink(data);
+        if (data && data.success) {
+          const safeLink = getSafeLink(data);
+          if (result) {
+            result.className = 'success';
+            result.innerHTML = ''
+              + '<h3>✅ アップロード成功！</h3>'
+              + '<p>' + (data.message || 'ファイルがアップロードされました') + '</p>'
+              + '<p><strong>ダウンロードリンク:</strong></p>'
+              + '<a href="' + safeLink + '" target="_blank" class="download-link">📥 ダウンロードページを開く</a>'
+              + '<div class="link-box">'
+              +   safeLink
+              +   '<button class="copy-btn" onclick="navigator.clipboard.writeText(\'' + safeLink + '\').then(()=>alert(\'リンクをコピーしました！\'))">📋 リンクをコピー</button>'
+              + '</div>'
+              + '<button onclick="location.reload()" style="margin-top:20px;">新しいファイルをアップロード</button>';
+            result.style.display = 'block';
+          }
+        } else {
+          throw new Error((data && data.error) || 'アップロードに失敗しました');
+        }
+      } catch (err) {
+        console.error(err);
         if (result) {
-          result.className = 'success';
-          result.innerHTML = \
-            <h3>✅ アップロード成功！</h3>
-            <p>\</p>
-            <p><strong>ダウンロードリンク:</strong></p>
-            <a href="\" target="_blank" class="download-link">📥 ダウンロードページを開く</a>
-            <div class="link-box">
-              \
-              <button class="copy-btn" onclick="navigator.clipboard.writeText('\').then(()=>alert('リンクをコピーしました！'))">📋 リンクをコピー</button>
-            </div>
-            <button onclick="location.reload()" style="margin-top:20px;">新しいファイルをアップロード</button>
-          \;
+          result.className = 'error';
+          result.innerHTML = '<h3>❌ エラー</h3><p>' + (err && err.message ? err.message : String(err)) + '</p>';
           result.style.display = 'block';
         }
-      } else {
-        throw new Error(data?.error || 'アップロードに失敗しました');
+      } finally {
+        if (uploadBtn) uploadBtn.disabled = false;
+        if (loading) loading.style.display = 'none';
       }
-    } catch (err) {
-      console.error(err);
-      if (result) {
-        result.className = 'error';
-        result.innerHTML = \<h3>❌ エラー</h3><p>\</p>\;
-        result.style.display = 'block';
-      }
-    } finally {
-      if (uploadBtn) uploadBtn.disabled = false;
-      if (loading) loading.style.display = 'none';
-    }
-  });
+    });
+  }
 });
 </script>
 </body>
 </html>
+
 
 
 
