--- a/download.html
+++ b/download.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -144,8 +144,8 @@
                        id="otp" 
                        name="otp" 
                        maxlength="6" 
-                       pattern="[0-9]{6}" 
-                       placeholder="000000" 
+                       pattern="[0-9a-fA-F]{6}" 
+                       placeholder="例: 0f9473" 
                        required 
                        autocomplete="off">
             </div>
@@ -278,3 +278,5 @@
     </script>
 </body>
 </html>
+
+
