Phase 36 EMERGENCY FIX: download.html完全修復（262行版）
- 壊れた1行ファイルを正常な262行Phase 36版に置き換え
- [Phase 36]デバッグログ追加
- POST /api/files/download実装（JSON返却）
- loadFileInfo/GET呼び出し完全削除
- window.location.href遷移実装

--- a/public/download.html
+++ b/public/download.html
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <!-- OTP入力フォーム（シンプル版：ファイル情報なし） -->
+        <!-- OTP入力フォーム -->
         <div id="download-container">
             <!-- OTP入力カード -->
             <div class="bg-white rounded-lg shadow-md p-6">
@@ -197,6 +197,8 @@
             downloadingEl.classList.remove('hidden');
 
             try {
+                console.log('[Phase 36] Requesting download URL:', { fileId, otp });
+
                 // Phase 36: POST /api/files/download → JSON（downloadUrl）
                 const response = await fetch('/api/files/download', {
                     method: 'POST',
@@ -204,7 +206,10 @@
                     body: JSON.stringify({ fileId, otp })
                 });
 
+                console.log('[Phase 36] Response status:', response.status);
+
                 const data = await response.json();
+                console.log('[Phase 36] Response data:', data);
 
                 if (!response.ok) {
                     let errorMessage = '認証コードが正しくありません。';
