fix: Correct URL parameter name from 'id' to 'fileId' in download.html

--- a/public/download.html
+++ b/public/download.html
@@ -312,7 +312,7 @@
   <script>
     // URL パラメータから fileId を取得
     const urlParams = new URLSearchParams(window.location.search);
-    const fileId = urlParams.get('id');
+    const fileId = urlParams.get('fileId');
 
     if (!fileId) {
       alert('ファイルIDが指定されていません');
@@ -489,3 +489,4 @@
   </script>
 </body>
 </html>
+
