--- a/download-v2.html
+++ b/download-v2.html
@@ -72,6 +72,13 @@
             color: #333;
             font-size: 14px;
             font-weight: 600;
+            text-align: right;
+            word-break: break-all;
+        }
+
+        .download-count {
+            color: #667eea;
+            font-weight: 700;
         }
 
         .input-group {
@@ -91,7 +98,9 @@
             padding: 12px 16px;
             border: 2px solid #e9ecef;
             border-radius: 10px;
-            font-size: 16px;
+            font-size: 18px;
+            letter-spacing: 2px;
+            text-align: center;
             transition: all 0.3s ease;
         }
 
@@ -118,7 +127,7 @@
             color: white;
         }
 
-        .btn-success:hover {
+        .btn-success:hover:not(:disabled) {
             transform: translateY(-2px);
             box-shadow: 0 10px 25px rgba(17, 153, 142, 0.4);
         }
@@ -134,7 +143,7 @@
             border-radius: 8px;
             margin-bottom: 20px;
             font-size: 14px;
-            text-align: center;
+            line-height: 1.5;
         }
 
         .message-success {
@@ -147,6 +156,12 @@
             background: #f8d7da;
             color: #721c24;
             border: 1px solid #f5c6cb;
+        }
+
+        .message-warning {
+            background: #fff3cd;
+            color: #856404;
+            border: 1px solid #ffeaa7;
         }
 
         .spinner {
@@ -168,8 +183,25 @@
         .help-text {
             font-size: 13px;
             color: #666;
-            margin-top: 10px;
-            line-height: 1.5;
+            margin-top: 15px;
+            line-height: 1.6;
+            text-align: center;
+        }
+
+        .otp-attempts {
+            font-size: 12px;
+            color: #dc3545;
+            margin-top: 5px;
+            text-align: center;
+        }
+
+        @media (max-width: 600px) {
+            .container {
+                padding: 30px 20px;
+            }
+            h1 {
+                font-size: 24px;
+            }
         }
     </style>
 </head>
@@ -189,6 +221,14 @@
                 <span class="file-info-value" id="file-size">-</span>
             </div>
             <div class="file-info-item">
+                <span class="file-info-label">送信先</span>
+                <span class="file-info-value" id="recipient">-</span>
+            </div>
+            <div class="file-info-item">
+                <span class="file-info-label">ダウンロード回数</span>
+                <span class="file-info-value download-count" id="download-count">-</span>
+            </div>
+            <div class="file-info-item">
                 <span class="file-info-label">有効期限</span>
                 <span class="file-info-value" id="expires-at">-</span>
             </div>
@@ -199,16 +239,17 @@
 
         <!-- OTP入力 -->
         <div class="input-group">
-            <label for="otp-input">認証コード（6桁）</label>
+            <label for="otp-input">認証コード（6桁の数字）</label>
             <input
                 type="text"
                 id="otp-input"
-                placeholder="例: 123456"
+                placeholder="123456"
                 maxlength="6"
                 pattern="[0-9]{6}"
                 inputmode="numeric"
                 autocomplete="off"
             >
+            <div class="otp-attempts" id="otp-attempts" style="display: none;"></div>
         </div>
 
         <!-- ダウンロードボタン -->
@@ -217,12 +258,12 @@
         </button>
 
         <p class="help-text">
-            メールに届いた6桁の認証コードを入力してください。
+            📧 メールに届いた6桁の認証コードを入力してください<br>
+            ⌨️ Enterキーでもダウンロードできます
         </p>
 
         <div class="spinner" id="spinner"></div>
     </div>
-
         <script>
         console.log('[DEBUG] Script loaded');
 
